src/test/resources/invalid_tests/UnusedVarName.cnna
architecture UnusedVarName{
    def input in
    def output out
    def output out2
    
    in ->
    fullyConnected(units=64, no_bias=true)
    activation.tanh()
    output {
        fullyConnected(no_bias=true)
        activation.softmax()
    } -> out
}